# zim

./: .gitignore  ASA_gns3.txt  README.md  Transparent_proxy.txt  find.txt  flash_player_in_linux.txt  git.txt  git_test.txt  grafana.txt  gt.lua  gt.py  gt.sh  gt.sh.bk  jelastic_firewall.txt  link.txt  making_laptop_hotspot.txt  masum-testing  masum.txt  nagios.office.txt  postfix.html  privoxy.txt  route_command_linux.txt  tmux.txt  txt.txt
CV/: CV_khabir.docx  Resume_khabir.docx  Resume_khabir.pages  Resume_khabir_sec.docx  reference.docx  update.txt  ~$sume_khabir_sec.docx
aaa/: freeradius.office.txt
ai/: antigravity.txt  copilot.txt
android/: reverse_tather.txt
ansible/: .playbook.txt.swp  basic_command.txt  facts_vars.txt  hosts  installation.txt  inventory.txt  module.txt  my_role.txt  playbook.txt  role.txt  roles.txt  vault.txt
apache/: httpd.txt  sample_config.txt
apparmor/: aa-command.txt  basic.txt  troubleshooting.txt
archlinux/: desktop_installation.txt  grub_error.txt  installation.txt  lvm_partitioning.txt  networking.txt  packages.txt  yay.txt
aws/: awscli.txt  cloudwatch.txt  elb.txt  iam.txt  metadata.txt  mysql.txt  ssh.txt
c/: how_to_run.txt
centos/: .acpid.txt.swp  acpid.txt  chsh.txt  dark_reader_chrome.txt  (+7 more)
coding/python/vatde/: README.md  pyproject.toml  setup.cfg  tox.ini
coding/python/vatde/src/: __init__.py  greet.py
coding/python/vatde/src/vatde/: example.py
coding/python/vatde/src/vatde.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
coding/python/vatde/tests/: test_example.py
(+2125 files in other folders)
