[metadata]
name = vatde
version = 0.0.1
description = Simple contact information manager.
long_description = README.md
long_description_content_type = text/x-rst
url = https://github.com/masumndc1/vatde
author = khabir uddin
author_email = masumndc1@gmail.com
license = BSD
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
platforms = any

[sdist]
formats=zip,tar

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    sprockets.http==1.5.0
    tox==3.24.0

[options.entry_points]
console_scripts =
    vatde-api = vatde:example

[options.packages.find]
where = src
